Fix workspace sidebar width to not cause flickering

--- a/app/assets/stylesheets/sub_styles/board/board_main.scss
+++ b/app/assets/stylesheets/sub_styles/board/board_main.scss
@@ -1,6 +1,7 @@
 .workspace-sidebar {
     height: 100vh;
     width: 5%;
+    max-width: 350px;
     min-width: 30px;
     overflow: hidden;
     background-color: rgb(247, 247, 247);
@@ -48,11 +49,11 @@
 
 .workspace-sidebar-open {
     @include workspace-sidebar-collapsed-btn-transition;
-    width: 100%;
+    width: 60%;
     min-width: 200px;
-    max-width: 350px;
     border-right: 1px solid lightgray;
     box-shadow: 5px 0px 20px rgba(145, 145, 145, 0.3);
+    overflow: hidden;
 
     div {
         @include div-visibility-toggle;
@@ -106,7 +107,7 @@
     width: 100%;
     height: 78%;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     margin-top: 10px;
     padding-top: 10px;
     border-top: 1px solid rgb(209, 217, 226);
